CrashRestart can now restart without start script
This is a test feature, so i do not recommend to use this.