@@ -1,6 +1,9 @@
 package autosave;
 
 import java.io.File;
+import java.nio.charset.Charset;
+
+import org.bukkit.Bukkit;
 
 public class JVMshutdownhook extends Thread {
 
@@ -15,6 +18,7 @@ public class JVMshutdownhook extends Thread {
 	try {
 		File restartscript = new File(crashrestartscriptpath);
 		if (restartscript.exists()) {
+		System.out.println("[AutoSaveWorld] Startup script found. Restarting");	
 		String OS = System.getProperty("os.name").toLowerCase();
 		if (OS.contains("win")) {
 			Runtime.getRuntime().exec("cmd /c start " + restartscript.getPath());
@@ -22,7 +26,18 @@ public class JVMshutdownhook extends Thread {
 			Runtime.getRuntime().exec(restartscript.getPath());
 		}
 		} else {
-		System.out.println("[AutoSaveWorld] Startup script not found. CrashRestart failed");	
+		System.out.println("[AutoSaveWorld] Startup script not found. Trying to restart without it. This may work strange or not work at all");
+		String processname = new File(Bukkit.class.getProtectionDomain().getCodeSource().getLocation().toURI()).getName();
+		String memory = Runtime.getRuntime().maxMemory()/1024/1024+"M";
+		String encoding = Charset.defaultCharset().toString();
+		String runcommand = "java -server -Xmx"+memory+" -XX:+UseBiasedLocking -XX:+AggressiveOpts -XX:+UseStringCache -XX:+UseFastAccessorMethods -Dfile.encoding="+encoding+" -jar "+processname;
+		System.out.println("Constructed startserver command: "+runcommand);
+		String OS = System.getProperty("os.name").toLowerCase();
+		if (OS.contains("win")) {
+			Runtime.getRuntime().exec("cmd /c start "+runcommand);
+		} else {
+			Runtime.getRuntime().exec(runcommand);
+		}
 		}
 	} catch (Exception e)
 	{System.out.println("[AutoSaveWorld] CrashRestart failed");
